--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ margin-bottom:0px;
   
   <a href="publications/">Publications</a>
   <br>
-  <a href="downscaling2/">Statistical Downscaling</a>
+  <a href="downscaling2/main.html">Statistical Downscaling</a>
   
   <p class="bigbold_diffmargin">Research Interests</p> 
 
