update more info link

--- a/astronomy/lp2006/overlay/dark.html
+++ b/astronomy/lp2006/overlay/dark.html
@@ -47,7 +47,7 @@ function HomeControl(controlDiv, map) {
 
   // Setup the click event listeners
   google.maps.event.addDomListener(controlUI, 'click', function() {
-    var url = "https://mywebspace.wisc.edu/dlorenz/web/astronomy/lp2006/";
+    var url = "http://djlorenz.github.io/astronomy/lp2006/";
     window.open(url);
   });
 
