--- a/publications/index.html
+++ b/publications/index.html
@@ -82,7 +82,7 @@ a:active {color:rgb(150,0,0);}  /* selected link */
 
    <p class="normal">2014 Notaro, M., D. J. Lorenz, C. Hoving, and M. Schummer <a href="Notaro_snow.pdf" target="_blank">21st century projections of snowfall and winter severity across central-eastern North America.</a> Revised and re-submitted to <em>Journal of Climate</em>.</p>
 
-  <p class="normal">2014 Kirchmeier, M. C., D. J. Lorenz, and D. J. Vimont <a href="MK_main.pdf" target="_blank">Statistical downscaling of daily wind speed variations.</a> Accepted in <em>Journal of Applied Meteorology and Climatology</em>.</p>
+   <p class="normal">2014 Kirchmeier, M. C., D. J. Lorenz, and D. J. Vimont <a href="http://journals.ametsoc.org/doi/abs/10.1175/JAMC-D-13-0230.1" target="_blank">Statistical Downscaling of Daily Wind Speed Variations</a> <em>Journal of Applied Meteorology and Climatology</em>, <strong>53</strong>, 660-675.</p>
     
   <p class="normal">2013 Delcambre, S. C., D. J. Lorenz, D. J. Vimont, and J. E. Martin <a href="http://journals.ametsoc.org/doi/abs/10.1175/JCLI-D-12-00359.1" target="_blank">Diagnosing Northern Hemisphere jet portrayal in 17 CMIP3 global climate models: Twenty-first-century projections.</a> <em>J. Climate</em>, <strong>26</strong>, 4930-4946.</p>
   
