--- a/publications/index.html
+++ b/publications/index.html
@@ -80,7 +80,7 @@ a:active {color:rgb(150,0,0);}  /* selected link */
 
   <p class="normal">2014 Holman, K. D., D. J. Lorenz, and M. Notaro <a href="jet_mca.pdf" target="_blank">Influence of the background state on Rossby wave propagation into the Great Lakes region based on observations and model simulations.</a> Revised and submitted to <em>Journal of Climate</em>.</p>
 
-    <p class="normal">2014 Notaro, M., D. J. Lorenz, C. Hoving, and M. Schummer <a href="http://journals.ametsoc.org/doi/abs/10.1175/JCLI-D-13-00520.1" target="_blank">21st century projections of snowfall and winter severity across central-eastern North America.</a> Accepted in <em>Journal of Climate</em>.</p>
+    <p class="normal">2014 Notaro, M., D. Lorenz, C. Hoving, and M. Schummer <a href="http://journals.ametsoc.org/doi/abs/10.1175/JCLI-D-13-00520.1" target="_blank">21st century projections of snowfall and winter severity across central-eastern North America.</a> Accepted in <em>Journal of Climate</em>.</p>
 
   <p class="normal">2014 Kirchmeier, M. C., D. J. Lorenz, and D. J. Vimont <a href="http://journals.ametsoc.org/doi/abs/10.1175/JAMC-D-13-0230.1" target="_blank">Statistical Downscaling of Daily Wind Speed Variations</a> <em>Journal of Applied Meteorology and Climatology</em>, <strong>53</strong>, 660-675.</p>
   
