--- a/publications/index.html
+++ b/publications/index.html
@@ -76,7 +76,7 @@ a:active {color:rgb(150,0,0);}  /* selected link */
 
   <p class="normal">2014 Lorenz, D. J. <a href="jet2_2col.pdf" target="_blank">Understanding mid-latitude jet variability and change using Rossby wave chromatography: Poleward shifted jets in response to external forcing.</a> Accepted in <em>Journal of the Atmospheric Sciences</em> <strong>(Part 2)</strong></p>
 
-  <p class="normal">2014 Lorenz, D. J. <a href="jet3_2col.pdf" target="_blank">Understanding mid-latitude jet variability and change using Rossby wave chromatography: Wave-mean flow interaction.</a> Revised and re-submitted to <em>Journal of the Atmospheric Sciences</em> <strong>(Part 3)</strong></p>
+  <p class="normal">2014 Lorenz, D. J. <a href="jet3_2col.pdf" target="_blank">Understanding mid-latitude jet variability and change using Rossby wave chromatography: Wave-mean flow interaction.</a> Accepted in <em>Journal of the Atmospheric Sciences</em> <strong>(Part 3)</strong></p>
 
   <p class="normal">2014 Holman, K. D., D. J. Lorenz, and M. Notaro <a href="jet_mca.pdf" target="_blank">Influence of the background state on Rossby wave propagation into the Great Lakes region based on observations and model simulations.</a> Revised and submitted to <em>Journal of Climate</em>.</p>
 
