--- a/astronomy/lp2006/index.html
+++ b/astronomy/lp2006/index.html
@@ -126,7 +126,7 @@ margin-top:10px;
   <p class="medium">Welcome to the latest version of the <a href="http://www.lightpollution.it/worldatlas/pages/fig1.htm" target="_blank">World Atlas of the Artificial Night Sky Brightness</a>! I've re-calculated Pierantonio Cinzano's original atlas using more recent <a href="http://ngdc.noaa.gov/eog/dmsp/download_radcal.html" target="_blank">satellite data</a> from 2006. The global coverage is also expanded from the original atlas (e.g. Hawaii, Alaska, and northern Canada and Siberia are now included).</p>
 
   <p class="bigbold">View Atlas in <a class="big" href="overlay/dark.html" target="_blank">Google Maps</a></p>
-   <p class="normal" style="text-align: center">The maps have a new <a href="colors.html" target="_blank">expanded color scale</a>. For me, Firefox zooms in more.</p>
+   <p class="normal" style="text-align: center">The maps have a new <a href="colors.html" target="_blank">expanded color scale</a>.</p>
   <hr color=gray>
   
   <br>
