--- a/astronomy/lp2006/index.html
+++ b/astronomy/lp2006/index.html
@@ -132,7 +132,7 @@ margin-top:10px;
   <br>
   <p class="bigbold">The Maps:</p>
 
-    <p class="medium">The full resolution world map is very hard to view due to its size. Therefore I also have a medium resolution world map and full resolution continent-scale maps that may be easier to use. Due to the image sizes, it may be better to download the images to your computer and use a good image viewer. A map showing the domain of the 6 continent-scale maps is below. There are two versions of each map: one with borders and coastlines and the other with nothing except light pollution. The resolution of most maps is 1/120 degrees. The medium resolution world maps are 1/40 degrees. I've used an <a href="colors.html" target="_blank">"expanded color scale"</a> for all maps.</p>
+    <p class="medium">The full resolution world map is very hard to view due to its size. Therefore I also have a medium resolution world map and full resolution continent-scale maps that may be easier to use. A map showing the domain of the 6 continent-scale maps is below. There are two versions of each map: one with borders and coastlines and the other with nothing except light pollution. The resolution of most maps is 1/120 degrees. The medium resolution world maps are 1/40 degrees. I've used an <a href="colors.html" target="_blank">"expanded color scale"</a> for all maps.</p>
 
   <table border="1" align="center">
     <tr>
