--- a/publications/index.html
+++ b/publications/index.html
@@ -72,7 +72,7 @@ a:active {color:rgb(150,0,0);}  /* selected link */
   
   <p class="medium">Journal Publications</p>
   
-  <p class="normal">2014 Lorenz, D. J. <a href="jet1_2col.pdf" target="_blank">Understanding mid-latitude jet variability and change using Rossby wave chromatography: Methodology.</a> Revised and re-submitted to <em>Journal of the Atmospheric Sciences</em> <strong>(Part 1)</strong></p>
+  <p class="normal">2014 Lorenz, D. J. <a href="jet1_2col.pdf" target="_blank">Understanding mid-latitude jet variability and change using Rossby wave chromatography: Methodology.</a> Accepted in <em>Journal of the Atmospheric Sciences</em> <strong>(Part 1)</strong></p>
 
   <p class="normal">2014 Lorenz, D. J. <a href="jet2_2col.pdf" target="_blank">Understanding mid-latitude jet variability and change using Rossby wave chromatography: Poleward shifted jets in response to external forcing.</a> Accepted in <em>Journal of the Atmospheric Sciences</em> <strong>(Part 2)</strong></p>
 
