part 2 in print

--- a/publications/index.html
+++ b/publications/index.html
@@ -74,7 +74,7 @@ a:active {color:rgb(150,0,0);}  /* selected link */
   
   <p class="normal">2014 Lorenz, D. J. <a href="jet1_2col.pdf" target="_blank">Understanding mid-latitude jet variability and change using Rossby wave chromatography: Methodology.</a> Accepted in <em>Journal of the Atmospheric Sciences</em> <strong>(Part 1)</strong></p>
 
-  <p class="normal">2014 Lorenz, D. J. <a href="jet2_2col.pdf" target="_blank">Understanding mid-latitude jet variability and change using Rossby wave chromatography: Poleward shifted jets in response to external forcing.</a> Accepted in <em>Journal of the Atmospheric Sciences</em> <strong>(Part 2)</strong></p>
+  <p class="normal">2014 Lorenz, D. J. <a href="http://journals.ametsoc.org/doi/abs/10.1175/JAS-D-13-0200.1" target="_blank">Understanding mid-latitude jet variability and change using Rossby wave chromatography: Poleward shifted jets in response to external forcing.</a> <em>Journal of the Atmospheric Sciences</em>, <strong>71</strong>, 2370-2389. <strong>(Part 2)</strong></p>
 
   <p class="normal">2014 Lorenz, D. J. <a href="jet3_2col.pdf" target="_blank">Understanding mid-latitude jet variability and change using Rossby wave chromatography: Wave-mean flow interaction.</a> Accepted in <em>Journal of the Atmospheric Sciences</em> <strong>(Part 3)</strong></p>
 
