--- a/publications/index.html
+++ b/publications/index.html
@@ -78,7 +78,7 @@ a:active {color:rgb(150,0,0);}  /* selected link */
 
   <p class="normal">2014 Lorenz, D. J. <a href="jet3_2col.pdf" target="_blank">Understanding mid-latitude jet variability and change using Rossby wave chromatography: Wave-mean flow interaction.</a> Accepted in <em>Journal of the Atmospheric Sciences</em> <strong>(Part 3)</strong></p>
 
-  <p class="normal">2014 Holman, K. D., D. J. Lorenz, and M. Notaro <a href="jet_mca.pdf" target="_blank">Influence of the background state on Rossby wave propagation into the Great Lakes region based on observations and model simulations.</a> Revised and submitted to <em>Journal of Climate</em>.</p>
+  <p class="normal">2014 Holman, K. D., D. J. Lorenz, and M. Notaro <a href="jet_mca.pdf" target="_blank">Influence of the background state on Rossby wave propagation into the Great Lakes region based on observations and model simulations.</a> Accepted in <em>Journal of Climate</em>.</p>
 
     <p class="normal">2014 Notaro, M., D. Lorenz, C. Hoving, and M. Schummer <a href="http://journals.ametsoc.org/doi/abs/10.1175/JCLI-D-13-00520.1" target="_blank">21st century projections of snowfall and winter severity across central-eastern North America.</a> Accepted in <em>Journal of Climate</em>.</p>
 
