part 1 in print

--- a/publications/index.html
+++ b/publications/index.html
@@ -72,13 +72,13 @@ a:active {color:rgb(150,0,0);}  /* selected link */
   
   <p class="medium">Journal Publications</p>
   
-  <p class="normal">2014 Lorenz, D. J. <a href="jet1_2col.pdf" target="_blank">Understanding mid-latitude jet variability and change using Rossby wave chromatography: Methodology.</a> Accepted in <em>Journal of the Atmospheric Sciences</em> <strong>(Part 1)</strong></p>
+  <p class="normal">2014 Lorenz, D. J. <a href="http://journals.ametsoc.org/doi/abs/10.1175/JAS-D-13-0199.1" target="_blank">Understanding mid-latitude jet variability and change using Rossby wave chromatography: Methodology.</a> <em>Journal of the Atmospheric Sciences</em>, <strong>72</strong>, 369-388. <strong>(Part 1)</strong></p>
 
   <p class="normal">2014 Lorenz, D. J. <a href="http://journals.ametsoc.org/doi/abs/10.1175/JAS-D-13-0200.1" target="_blank">Understanding mid-latitude jet variability and change using Rossby wave chromatography: Poleward shifted jets in response to external forcing</a> <em>Journal of the Atmospheric Sciences</em>, <strong>71</strong>, 2370-2389. <strong>(Part 2)</strong></p>
 
   <p class="normal">2014 Lorenz, D. J. <a href="http://journals.ametsoc.org/doi/abs/10.1175/JAS-D-13-0201.1" target="_blank">Understanding mid-latitude jet variability and change using Rossby wave chromatography: Wave-mean flow interaction.</a> <em>Journal of the Atmospheric Sciences</em>, <strong>71</strong>, 3684-3705. <strong>(Part 3)</strong></p>
 
-  <p class="normal">2014 Holman, K. D., D. J. Lorenz, and M. Notaro <a href="http://journals.ametsoc.org/doi/abs/10.1175/JCLI-D-13-00758.1" target="_blank">Influence of the background state on Rossby wave propagation into the Great Lakes region based on observations and model simulations.</a> Accepted in <em>Journal of Climate</em>.</p>
+  <p class="normal">2014 Holman, K. D., D. J. Lorenz, and M. Notaro <a href="http://journals.ametsoc.org/doi/abs/10.1175/JCLI-D-13-00758.1" target="_blank">Influence of the background state on Rossby wave propagation into the Great Lakes region based on observations and model simulations.</a> <em>Journal of Climate</em>, <strong>27</strong>, 9302-9322.</p>
 
     <p class="normal">2014 Notaro, M., D. Lorenz, C. Hoving, and M. Schummer <a href="http://journals.ametsoc.org/doi/abs/10.1175/JCLI-D-13-00520.1" target="_blank">Twenty-First-Century Projections of Snowfall and Winter Severity across Central-Eastern North America.</a> <em>Journal of Climate</em>, <strong>27</strong>, 6526–6550.</p>
 
