--- a/downscaling2/LSPred/weight.html
+++ b/downscaling2/LSPred/weight.html
@@ -24,7 +24,7 @@ background-image:url(../../images/lower420.png);
   });
 </script>
 <script type="text/javascript"
-  src="https://c328740.ssl.cf1.rackcdn.com/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+  src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
 </script>
 
 </head>
